<resources>
    <string name="app_name">Chefantasia</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="welcome_user">Welcome, user</string>

</resources>