<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.loginchefantasia.RegisterActivity">

    <ImageView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edittext_c_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword">
        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFA500"
        android:textColor="#ffffff"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>
