<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.loginchefantasia.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#FFFFFF"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFA500"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#FFA500"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>
